removal of overflow to ensure footer visible on all mobiles

--- a/berlin_leitlinien/assets/scss/components/_footer.scss
+++ b/berlin_leitlinien/assets/scss/components/_footer.scss
@@ -28,8 +28,6 @@
 .footer__list {
     margin: 0;
 
-    overflow: hidden;
-
     text-align: right;
     list-style: none;
 }
